# refcast

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml
.github/workflows/: integration.yml  release.yml  test.yml
docs/: hero-recording.md
scripts/: publish.sh
src/refcast/: __init__.py  cli.py  config.py  evidence.py  mcp.py  merge.py  models.py  perspectives.py  router.py  size_guard.py  synthesizer.py
src/refcast/backends/: base.py  exa.py  gemini_fs.py
src/refcast/tools/: _utils.py  corpus_delete.py  corpus_list.py  corpus_status.py  corpus_upload.py  research.py  research_verify.py
tests/: conftest.py  test_cli.py  test_config.py  test_evidence.py  test_integration.py  test_integrity_scope.py  test_mcp_bootstrap.py  test_mcp_server.py  test_merge.py  test_models.py  test_perspectives.py  test_router.py  test_size_guard.py  test_synthesizer.py
tests/backends/: test_base.py  test_exa.py  test_gemini_fs.py
tests/tools/: test_corpus_delete.py  test_corpus_list.py  test_corpus_status.py  test_corpus_upload.py  test_research.py  test_research_corpus_state.py  test_research_verify.py
