[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refcast"
version = "0.1.0"
description = "Cast once, cite anywhere. MCP server that queries multiple research backends and returns citations in one consistent shape."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sznix" }]
keywords = ["mcp", "research", "gemini", "exa", "citations", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.2.4,<4.0",
    "google-genai>=1.73.1,<2.0",
    "exa-py>=2.12.0,<3.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.10,<3.0",
    "python-dotenv>=1.0,<2.0",
    "keyring>=25.0,<26.0",
    "typer>=0.13,<1.0",
]

[project.scripts]
refcast = "refcast.cli:app"
refcast-mcp = "refcast.mcp:main"

[project.urls]
Homepage = "https://github.com/sznix/refcast"
Issues = "https://github.com/sznix/refcast/issues"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "respx>=0.22,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "coverage>=7.6,<8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: real API calls, requires GEMINI_API_KEY + EXA_API_KEY (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
